outputs/main/reevo-qd_bpp_online_2025-07-26_01-19-44/problem_iter1_response24.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 26
    score bonuses = bins_remain_cap - size_differences
          ^^^^^^^
SyntaxError: invalid syntax
12
4
